--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             </p>
         </article>
     </section>
+
     <aside class="benefits">
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -72,12 +73,13 @@
             </p>
         </article>
     </aside>
-    <div class="footer">
+    
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
